# Automate-WiFi-Mapping-Using-Robot

./: .gitignore  DCMotor_Encoder.py  Installati.txt  Motor_control.py  README.md  Usefull_link.txt  frames.gv  mod.xcf  phidgetMotor.py
USed/cinnamon/: Cinnamon.py  Enum_Type.py  cinnamon.sql
USed/movement/: cinnamonController.py  insertWaypoints.py  mapping.py  package.xml  point_controller.py
USed/movement/odometry/: point.py
USed/navigation/mybot_description/launch/: mybot_rviz_gmapping.launch
USed/navigation/mybot_navigation/config/: dwa_local_planner_params.yaml
USed/navigation/mybot_navigation/map_cubo/: corridoio1.yaml
USed/navigation/mybot_navigation/map_cubo/mapCorridoio/: corridoio4_other.yaml  corridoio5_other_back.yaml  corridoio_all_1.yaml  (+1 more)
USed/navigation/mybot_navigation/maps/: ufficioGMap.pgm  ufficoGmap.yaml
USed/script/: launchGmapping.sh  launchJoystick.sh  launchOdometry.sh  ufficioGMap.pgm
catkin_ws/: frames.gv  scan.bag  ufficio.yaml.yaml
catkin_ws/src/: CMakeLists.txt  frames.gv  hokuyo_start.launch  locationc
catkin_ws/src/chapter8_tutorials/: CMakeLists.txt
catkin_ws/src/chapter8_tutorials/src/: base_controller.cpp  c8_odom.cpp
catkin_ws/src/cinnamon/: CMakeLists.txt  Sniffer.py  cinnamon.sql  cinnamon_waypoint_office.sql  create_table.sql  db.py  package.xml
catkin_ws/src/cinnamon/dump/: cinnamon_ap.sql  cubo1_alcontrario (copy).sql  cubo1_alcontrario.sql  cubo4_pazzo.sql
catkin_ws/src/cinnamon/launch/: cinnamon_controller.launch
catkin_ws/src/cinnamon/node/: cinnamonController.py  listener.py
catkin_ws/src/cinnamon/src/: Sniffer.py  db.py  launch_cinnamon.py
catkin_ws/src/corobot/corobot_hokuyo/: hokuyo_test.launch  hokuyo_test_intensity.launch  manifest.xml
catkin_ws/src/corobot/corobot_state_tf/: CMakeLists.txt
catkin_ws/src/corobot/map_to_jpeg/: CMakeLists.txt  package.xml
catkin_ws/src/location/: .second_part_modify.sql.kate-swp  CMakeLists.txt  aaa.tx  aaa.txt  db.sql  example.txt  first_part.sql  first_part_modify.sql  location.py  locationPane.py  myscrollbar.py  package.xml  script.py  second_cubo2_part_modify.sql  waypoint_second  waypointc
catkin_ws/src/location/sql/: second_part.sql  second_part_modify.sql
catkin_ws/src/location/waypoint/: insertWaypoints.py  mapping.py  point_controller.py
catkin_ws/src/movement/: CMakeLists.txt  cinnamon.launch  cinnamonController.py  cubo2_prima_parte.sql  cubo2_wromg.sql  cubo3_wromg.sql  insertWaypoints.py  listener.py  mapping.py  package.xml  sendGoals.py
catkin_ws/src/movement/mybot_navigation/config_without/: costmap_common_params.yaml
catkin_ws/src/movement/mybot_navigation/notUsed/config_simul/: base_local_planner_params.yaml
catkin_ws/src/movement/odometry/: c8_odom.cpp  c8_odom_encoders.cpp  db_.py  mapping.py  point_controller.py  sendGoals.py
catkin_ws/src/navigation/simple_navigation_goals/: CMakeLists.txt
catkin_ws/src/script/: exportForRviz.sh  launchGmapping.sh  launchJoystick.sh  launchOdometry.sh  ufficioGMap.yaml
catkin_ws/src/tino_4ruote/simple_navigation_goals/: package.xml
catkin_ws/view_frames/: frames_amcl.gv  frames_hector.gv
notUsed/chapter8_tutorials/: CMakeLists.txt  package.xml
notUsed/launch_old/: amcl_demo.launch  gmapping_demo.launch
notUsed/mybot_description/launch/: mybot_rviz_amcl.launch
notUsed/mybot_navigation/config/: costmap_common_params.yaml  dwa_local_planner_params.yaml  teb_local_planner_params.yaml
notUsed/mybot_navigation/launch/: amcl_demo.launch  gmapping_demo.launch  odom_navigation_demo.launch
notUsed/mybot_navigation/maps/: ufficio2.yaml  ufficio_fermo.pgm  ufficio_fermo.yaml
notUsed/mybot_navigation/notUsed/config_eod/: costmap_common_params.yaml
notUsed/mybot_navigation/notUsed/map_nav_params_without/: local_costmap_params.yaml
notUsed/tino_4ruote/mybot_description/launch/: mybot_rviz_gmapping.launch
notUsed/tino_4ruote/mybot_gazebo/launch/: mybot_world.launch
notUsed/tino_4ruote/mybot_navigation/config/: base_local_planner_params.yaml
notUsed/tino_4ruote/mybot_navigation/launch/: amcl_demo.launch
notUsed/tino_4ruote/simple_navigation_goals/src/: simple_nav_goals.cpp
(+73 files in other folders)
