<?xml version="1.0"?>
<package format="2">
  <name>location</name>
  <version>0.1.0</version>
  <description>Location.</description>



  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>libpcl-all-dev</build_depend>

  <exec_depend>libpcl-all</exec_depend>

  <depend>dynamixel_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>joy</depend>
  <depend>nav_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>corobot_msgs</depend>
  <depend>move_base_msgs</depend>
</package>



